[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/leveleditor/menus/DeleteWorldDialog.gd" type="Script" id=2]
[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.8, 0.8, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.490196, 0.490196, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 5
anti_aliasing = false
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0509804, 0.0588235, 0.101961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 5
anti_aliasing = false
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.764706, 0.0313726, 0.0313726, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 5
anti_aliasing = false
anti_aliasing_size = 0.01

[node name="DeleteLevelDialog" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 71.0
margin_top = 40.0
margin_right = -71.0
margin_bottom = -40.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
is_level_delete = true
delay_delete_button = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 234.0
margin_right = -234.0
alignment = 1

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 203.0
margin_right = 670.0
margin_bottom = 233.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Delete Level"
text = "Delete Level"
fit_content_height = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 237.0
margin_right = 670.0
margin_bottom = 267.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 271.0
margin_right = 670.0
margin_bottom = 334.0
text = "Are you sure you want to delete this level?

You will not be able to recover it."
align = 1
valign = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 670.0
margin_bottom = 368.0

[node name="VBoxContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 372.0
margin_right = 670.0
margin_bottom = 436.0

[node name="EscapeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 329.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
text = "No"

[node name="ConfirmDelete" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 341.0
margin_right = 670.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "Yes"

[node name="DeletionMessage" type="PopupDialog" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 20.0
margin_right = -15.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="DeletionMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 246.0
margin_right = -246.0
alignment = 1

[node name="Label" type="Label" parent="DeletionMessage/VBoxContainer"]
margin_top = 228.0
margin_right = 616.0
margin_bottom = 249.0
text = "The level has been deleted."
align = 1
valign = 1
autowrap = true

[node name="SpaceFiller" type="Control" parent="DeletionMessage/VBoxContainer"]
margin_top = 253.0
margin_right = 616.0
margin_bottom = 303.0
rect_min_size = Vector2( 0, 50 )

[node name="FinishDelete" type="Button" parent="DeletionMessage/VBoxContainer"]
margin_top = 307.0
margin_right = 616.0
margin_bottom = 371.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
text = "OK"

[connection signal="about_to_show" from="." to="." method="_on_DeleteWorldDialog_about_to_show"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/EscapeButton" to="." method="_on_EscapeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ConfirmDelete" to="." method="_on_ConfirmDelete_pressed"]
[connection signal="pressed" from="DeletionMessage/VBoxContainer/FinishDelete" to="." method="_on_FinishDelete_pressed"]
